# Forbered-afskrivning-af-foraeldede-sagsomkostninger

./: README.md  main.bat  main.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
forbered_afskrivining_af_foraeldede_sagsomkostninger/: __main__.py  config.py  error_screenshot.py  excel_process.py  exceptions.py  framework.py  get_constants.py  initialize.py  process.py  reset.py
forbered_afskrivining_af_foraeldede_sagsomkostninger/tests/: test_emails.py
src/: auxiliary.py  config.py  error_screenshot.py  excel_process.py  framework.py  get_constants.py  initialize.py  process.py  reset.py  sql_transactions.py
src/tests/: test_alteryx_process.py  test_aux.py
